infra/gke/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pitch
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "pitch"}'
spec:
  selector:
    app: pitch
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pitch
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ${GKE_STATIC_IP_NAME}
    networking.gke.io/managed-certificates: pitch
    networking.gke.io/v1beta1.FrontendConfig: pitch
spec:
  rules:
    - host: ${API_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pitch
                port:
                  number: 80
